force-app/main/default/objects/bpats__ATS_Job_View_List__mdt/bpats__ATS_Job_View_List__mdt.object-meta.xml
<CustomObject>
    <label>ATS Job View List</label>
    <pluralLabel>ATS Job View Lists</pluralLabel>
</CustomObject>