force-app/main/default/objects/bpats__ATS_Job_View_List__mdt/fields/bpats__Field_Set_API_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Field_Set_API_Name__c</fullName>
    <label>Field Set API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>