force-app/main/default/objects/bpats__ATS_Job_View_List__mdt/fields/bpats__Filter_JSON__c.field-meta.xml
<CustomField>
    <fullName>bpats__Filter_JSON__c</fullName>
    <label>Filter JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>