force-app/main/default/objects/bpats__ATS_Job_View_List__mdt/fields/bpats__Index__c.field-meta.xml
<CustomField>
    <fullName>bpats__Index__c</fullName>
    <label>Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>